--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"> 
-	<title>Bootstrap 实例 - 一个简单的网页</title>
+	<title>WHC-20067</title>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">  
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -100,7 +100,8 @@
 			<th>编码</th>
 			<th>规格</th>
 			<th>描述</th>
-			<th>DMS/ERP售价</th>
+			<th>DMS售价</th>
+			<th>ERP售价</th>
 			<th>备注</th>
 		</tr>
 	</thead>
@@ -110,7 +111,8 @@
 			<td>31110347</td>
 			<td>19560R15</td>
 			<td>88V ULTC UC6 #</td>
-			<td>530/无</td>
+			<td>530</td>
+			<td>无</td>
 			<td></td>
 		</tr>
 		<tr>
