--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-mm<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8"> 
@@ -92,14 +92,14 @@ mm<!DOCTYPE html>
 	</div>
 	
 </div>
-<div>
+!<div>
 	<select id="size">
 		<option value="1">19560R15</option>
 		<option value="2">20550R17</option>
 	</select>
-</div>
+!</div>
 <div>
-<table class="table table-hover,table table-bordered">
+<table class="table table-hover",!table table-bordered>
 	<caption>2019年3月5日</caption>
 	<thead>
 		<tr>
