--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">  
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/select2.js"></script>
 	<script>
 		$(document).ready(function(){
 			$("#size").select2();
@@ -97,12 +98,12 @@
 	</div>
 	
 </div>
-!<div>
+<div>
 	<select id="size">
 		<option value="1">19560R15</option>
 		<option value="2">20550R17</option>
 	</select>
-!</div>
+</div>
 <div>
 <table class="table table-hover",!table table-bordered>
 	<caption>2019年3月5日</caption>
