--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							 <a href="#">Link</a>
+							 <a href="#">轮胎</a>
 						</li>
 						<li>
-							 <a href="#">Link</a>
+							 <a href="#">刹车片</a>
 						</li>
+						<li>
+							 <a href="#">正时&火花塞</a>
+						</li>
+						
 						<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
