--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="col-md-12 column">
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Brand</a>
+					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">whc-20067</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -110,7 +110,7 @@
 </div>-->
 <div>
 <table class="table table-hover",!table table-bordered>
-	<caption>2019年3月5日</caption>
+	<caption>2019年3月5日 暂时未更新完</caption>
 	<thead>
 		<tr>
 			<th>品牌</th>
@@ -550,7 +550,7 @@
 </table>
 </div>
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>底部内容</p>
+  <p>qq:540009202</p>
 </div>
 </body>
 </html>
