--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							 <a href="#">正时&火花塞</a>
 						</li>
 						
-						<li class="dropdown">
+						<!--<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
@@ -63,7 +63,7 @@
 									 <a href="#">One more separated link</a>
 								</li>
 							</ul>
-						</li>
+						</li>-->
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
