--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	</select>
 </div>-->
 <div class="table-responsive">
-<table class="table-hover table-bordered <!--table-striped-->">
+<table class="table-hover <!--table-bordered table-striped-->">
 	<caption>2019年3月5日 暂时未更新完</caption>
 	<thead>
 		<tr>
