--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <table class="table table-hover table-bordered">
 	<caption>2019年3月5日 暂时未更新完</caption>
 	<thead>
-		<tr>
+		<tr class="success">
 			<th>品牌</th>
 			<th>编码</th>
 			<th>规格</th>
