--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
 		
-        <div class="carousel-item active" style="background-image: url(img/gallery_valdersflye02.jpg)"> <!--class="carousel-item active"--> 
+        <div class="carousel-item active" style="background-image: url(img/gallery_signature_face.jpg)"> <!--class="carousel-item active"--> 
           <div class="carousel-caption d-none d-md-block">
             <h3></h3>
             <p></p>
@@ -95,14 +95,14 @@
 		 
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_oldtown_011.jpg)">
           <div class="carousel-caption d-none d-md-block">
             <h3>Second Slide</h3>
             <p>This is a description for the second slide.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_entrance_second_006_8bit.jpg)">
           <div class="carousel-caption d-none d-md-block">
             <h3>Third Slide</h3>
             <p>This is a description for the third slide.</p>
