--- a/services.html
+++ b/services.html
@@ -38,17 +38,17 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">返回首页</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">关于我们</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
