--- a/services.html
+++ b/services.html
@@ -16,7 +16,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+<style type="text/css">
+	th{color:white }
+	th{background-color:#404040;}
+	</style>
 </head>
 
 <body>
@@ -79,18 +82,18 @@
   </nav>
 
  <div class="table-responsive">
-<table class="table table-hover table-bordered">
+<table class="table text-nowrap table-striped">
 	<br>
 	<h1>2019年3月5日 暂时未更新完</h1>
 	<thead>
-		<tr class="success">
-			<th>品牌</th>
-			<th>编码</th>
-			<th>规格</th>
-			<th>描述</th>
-			<th>ERP售价</th>
-			<th>DMS售价</th>
-			<th>备注</th>
+		<tr style="position:fixed">
+			<th style="width:90px">品牌</th>
+			<th style="width:110px">编码</th>
+			<th style="width:105px">规格</th>
+			<th style="width:355px">描述</th>
+			<th style="width:50px">ERP</th>
+			<th style="width:50px">DMS</th>
+			<th style="width:225px">备注</th>
 		</tr>
 	</thead>
 	<tbody>
