--- a/services.html
+++ b/services.html
@@ -86,14 +86,14 @@
 	<br>
 	<h1>2019年3月5日 暂时未更新完</h1>
 	<thead>
-		<tr style="position:fixed">
-			<th style="width:90px">品牌</th>
-			<th style="width:110px">编码</th>
-			<th style="width:105px">规格</th>
-			<th style="width:355px">描述</th>
-			<th style="width:50px">ERP</th>
-			<th style="width:50px">DMS</th>
-			<th style="width:225px">备注</th>
+		<tr>
+			<th>品牌</th>
+			<th>编码</th>
+			<th>规格</th>
+			<th>描述</th>
+			<th>ERP</th>
+			<th>DMS</th>
+			<th>备注</th>
 		</tr>
 	</thead>
 	<tbody>
