--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
 		
-        <div class="carousel-item active" style="background-image: url(img/gallery_signature_face.jpg)"> <!--class="carousel-item active"--> 
+        <div class="carousel-item active" style="background-image: url(img/gallery_signature_face.jpg); background-position: center;"> <!--class="carousel-item active"--> 
           <div class="carousel-caption d-none d-md-block">
             <h3></h3>
             <p></p>
@@ -96,7 +96,7 @@
 		 
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_oldtown_011.jpg)">
+        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_oldtown_011.jpg); background-position: center;">
           <div class="carousel-caption d-none d-md-block">
             <h3></h3>
             <p></p>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_entrance_second_006_8bit.jpg)">
+        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_entrance_second_006_8bit.jpg); background-repeat:no-repeat; background-size:100% 100%;-moz-background-size:100% 100%;">
           <div class="carousel-caption d-none d-md-block">
             <h3></h3>
             <p></p>
