--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url(img/gallery_isaksson_entrance_second_006_8bit-2.jpg); background-repeat:no-repeat; background-size:100% 100%;-moz-background-size:100% 100%;">
+        <div class="carousel-item" style="background-image: url(img/gallery_valdersflye02.jpg);  background-position: center;" ><!--background-repeat:no-repeat; background-size:100% 100%;-moz-background-size:100% 100%;">-->
           <div class="carousel-caption d-none d-md-block">
             <h3></h3>
             <p></p>
