--- a/services.html
+++ b/services.html
@@ -33,16 +33,20 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">关于我们</a>
-          </li>
+          
           <li class="nav-item active">
             <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="#">刹车片</a>
           </li>
-          <li class="nav-item dropdown">
+		  <li class="nav-item">
+            <a class="nav-link" href="#">皮带火花塞</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link" href="#">关于我们</a>
+          </li>
+          <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Portfolio
             </a>
@@ -76,7 +80,7 @@
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
           </li>
-        </ul>
+        </ul>-->
       </div>
     </div>
   </nav>
