--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">刹车片</a>
+            <a class="nav-link" href="braket.html">刹车片</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link" href="#">皮带火花塞</a>
