--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="braket.html"><img class="card-img-top" src="img/timg.jpg" alt=""></a>
+          <a href="braket.html"><img class="card-img-top" src="img/1CZ3L7260_400x400.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="braket.html">刹车片</a>
