--- a/services.html
+++ b/services.html
@@ -94,9 +94,9 @@
 			<th>品牌</th>
 			<th>编码</th>
 			<th>规格</th>
+			<th>ERP单价</th>
 			<th>描述</th>
-			<th>ERP</th>
-			<th>DMS</th>
+			<th>DMS单价</th>
 			<th>备注</th>
 		</tr>
 	</thead>
@@ -575,9 +575,9 @@
 			<td>马牌</td>
 			<td>31434501</td>
 			<td>225/55R17</td>
-			td>1046</td>
+			<td>1046</td>
 			<td>97V UC6 Vol</td>
-			<
+			
 			<td>1037</td>
 			<td></td>
 		</tr>
