--- a/braket-1.html
+++ b/braket-1.html
@@ -17,9 +17,12 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 <style type="text/css">
-	</style>
-	<!--th{color:white } th{background-color:#404040;}-->
+	th{color:white }
+	th{background-color:#404040;}
+	.table td{vertical-align: middle;}
 	
+	
+	</style>
 </head>
 
 <body>
@@ -38,7 +41,7 @@
             <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="braket.html">刹车片</a>
+            <a class="nav-link" href="#">刹车片</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link" href="#">皮带火花塞</a>
@@ -46,16 +49,51 @@
 		  <li class="nav-item">
             <a class="nav-link" href="#">关于我们</a>
           </li>
-           </div>
-		</div>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Portfolio
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Blog
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Other Pages
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
+              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
+              <a class="dropdown-item" href="faq.html">FAQ</a>
+              <a class="dropdown-item" href="404.html">404</a>
+              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+            </div>
+          </li>
+        </ul>-->
+      </div>
+    </div>
   </nav>
 	</nav>
 
- <div class="table-responsive">
-<table class="table text-nowrap table-striped table-sm">
+ <div>
+<table class="table text-nowrap">
 	<br>
-	<h1>2019年3月5日</h1>
-	<thead class="thead-dark">
+	<h1>2019年3月5日 </h1>
+	<thead>
 		<tr>
 			<th>车型</th>
 			<th>刹车盘尺寸</th>
@@ -175,12 +213,13 @@
 			<td>929</td>
 		</tr>
 		
+		
 	</tbody>
 </table>
 </div>
 
   <footer class="py-5 bg-dark">
-    <div class="container">
+    <div >
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
