--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
   </nav>
 
  <div class="table-responsive">
-<table class="table text-nowrap table-striped">
+<table class="table text-nowrap table-striped table-sm">
 	<br>
 	<h1>2019年3月5日</h1>
 	<thead>
