--- a/braket.html
+++ b/braket.html
@@ -17,8 +17,9 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 <style type="text/css">
+	.table td{vertical-align: middle;}
 	</style>
-	<!--th{color:white } th{background-color:#404040;}-->
+
 	
 </head>
 
@@ -52,7 +53,7 @@
 	</nav>
 
  <div class="table-responsive">
-<table class="table text-nowrap table-striped table-sm">
+<table class="table text-nowrap table-bordered table-sm">
 	<br>
 	<h1>2019年3月5日</h1>
 	<thead class="thead-dark">
@@ -92,7 +93,7 @@
 			<td>年份16年起及以后</td>
 			<td>1039</td>
 		</tr>
-		<tr>
+		<tr class="table-secondary">
 			<td rowspan="3" ><b>S60L-S60-V60</b></td>
 			<td>16"</td>
 			<td>前刹车片</td>
@@ -102,7 +103,7 @@
 			<td>929/931/931</td>
 			
 		</tr>
-		<tr>
+		<tr class="table-secondary">
 			
 			<td></td>
 			<td>后刹车片</td>
@@ -111,7 +112,7 @@
 			<td><font color="#ff0000">常用件</td>
 			<td>781</td>
 		</tr>
-		<tr>
+		<tr class="table-secondary">
 			
 			<td>16.5"17.5"</td>
 			<td>前刹车片</td>
