--- a/braket.html
+++ b/braket.html
@@ -59,7 +59,7 @@
 	<thead class="thead-dark">
 		<tr>
 			<th>车型</th>
-			<th>刹车盘尺寸</th>
+			<th>盘尺寸</th>
 			<th>名称</th>
 			<th>编码</th>
 			<th>ERP售价</th>
@@ -68,13 +68,49 @@
 		</tr>
 	</thead>
 	<tbody>
+		<tr class="table-secondary">
+			<td rowspan="4" ><b>SPA XC60 II代</b></td>
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31423652</td>
+			<td>1137</td>
+		<td style="color: #FF0000">常用</td>
+			<td>1137</td>
+			
+		</tr>
+		<tr class="table-secondary">
+		
+			<td>16"</td>
+			<td>后刹车片</td>
+			<td>31687502</td>
+			<td>986</td>
+			<td style="color: #FF0000">常用</td>
+			<td>879</td>
+		<tr class="table-secondary">
+			
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31499906</td>
+			<td>1148</td>
+			<td>t8混动</td>
+			<td>1148</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td>17"</td>
+			<td>后刹车片</td>
+			<td>32233035</td>
+			<td>929</td>
+			<td>t8混动</td>
+			<td>929</td>
+		</tr>
 		<tr>
 			<td rowspan="3" ><b>17款XC60</b></td>
 			<td></td>
 			<td>前刹车片</td>
 			<td>31685796</td>
 			<td>1064</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>1064</td>
 		</tr>
 		<tr>
@@ -82,7 +118,7 @@
 			<td>后刹车片</td>
 			<td>31685796</td>
 			<td>781</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>781</td>
 		</tr>
 		<tr>
@@ -94,22 +130,30 @@
 			<td>1039</td>
 		</tr>
 		<tr class="table-secondary">
-			<td rowspan="3" ><b>S60L-S60-V60</b></td>
+			<td rowspan="4" ><b>S60L-S60-V60</b></td>
 			<td>16"</td>
 			<td>前刹车片</td>
-			<td>31434804/30793540/30793941</td>
-			<td>1092/931/1106</td>
-			<td><font color="#ff0000">常用件</td>
-			<td>929/931/931</td>
+			<td>30793941</td>
+			<td>1106</td>
+		<td style="color: #FF0000">常用</td>
+			<td>931</td>
 			
 		</tr>
+		<tr class="table-secondary">
+		
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31434804/30793540</td>
+			<td>1092/931</td>
+			<td style="color: #FF0000"></td>
+			<td>929/931</td>
 		<tr class="table-secondary">
 			
 			<td></td>
 			<td>后刹车片</td>
 			<td>31317482</td>
 			<td>781</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>781</td>
 		</tr>
 		<tr class="table-secondary">
@@ -127,38 +171,38 @@
 			<td>前刹车片</td>
 			<td>31423652</td>
 			<td>1137</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>1137</td>
 		</tr>
 		<tr>
 			
 			<td>16"</td>
-			<td>31687502</td>
 			<td>后刹车片</td>
+			<td>31687502</td>
 			<td>986</td>
-			<td><font color="#ff0000">T4常用</td>
+			<td style="color: #FF0000">t4常用</td>
 			<td>879</td>
 		</tr>
 		<tr>
 			
 			<td>17"</td>
-			<td>32233035</td>
 			<td>后刹车片</td>
+			<td>32233035</td>
 			<td>929</td>
-			<td><font color="#ff0000">T5常用</td>
+			<td style="color: #FF0000">t5常用</td>
 			<td>929</td>
 		</tr>
 		<tr>
 			
 			<td>18"</td>
-			<td>31499906</td>
 			<td>前刹车片</td>
+			<td>31499906</td>
 			<td>1148</td>
 			<td></td>
 			<td>1148</td>
 		</tr>
-		<tr>
-			<td rowspan="2" ><b>SPA XC90</b></td>
+		<tr class="table-secondary">
+			<td rowspan="2" ><b>SPA新XC90</b></td>
 			<td>18"19"</td>
 			<td>前刹车片</td>
 			<td>31499906</td>
@@ -166,8 +210,7 @@
 			<td></td>
 			<td>1148</td>
 		</tr>
-		<tr>
-			
+        <tr class="table-secondary">
 			<td>17"18"</td>
 			<td>后刹车片</td>
 			<td>32233035</td>
@@ -175,8 +218,145 @@
 			<td></td>
 			<td>929</td>
 		</tr>
+		<tr>
+			<td rowspan="3" ><b>老款XC90</b></td>
+			<td>17.5"</td>
+			<td>前刹车片</td>
+			<td>31262705</td>
+			<td>1349</td>
+			<td style="color: #FF0000">常用</td>
+			<td>1137</td>
+		</tr>
+        <tr>
+			<td></td>
+			<td>后刹车片</td>
+			<td>30793093</td>
+			<td>793</td>
+			<td style="color: #FF0000">常用</td>
+			<td>793</td>
+		</tr>
+		<tr>
+		    <td>17"</td>
+			<td>前刹车片</td>
+			<td>31687104</td>
+			<td>1064</td>
+			<td style="color: #FF0000"></td>
+			<td>1064</td>
+		</tr>
+	 <tr class="table-secondary">
+			<td rowspan="2" ><b>C30 S40</b></td>
+			<td>15"16"</td>
+			<td>前刹车片</td>
+			<td>30742030</td>
+			<td>774</td>
+			<td></td>
+			<td>774</td>
+		</tr>
+        <tr class="table-secondary">
+			<td></td>
+			<td>后刹车片</td>
+			<td>30742031</td>
+			<td>731</td>
+			<td></td>
+			<td>731</td>
+		</tr>
+	    <tr>
+			<td rowspan="3" ><b>V40 V40CC</b></td>
+			<td>15"16"</td>
+			<td>前刹车片</td>
+			<td>31341301</td>
+			<td>894</td>
+			<td style="color: #FF0000">常用</td>
+			<td>929</td>
+		</tr>
+        <tr>
+			<td></td>
+			<td>后刹车片</td>
+			<td>31341327</td>
+			<td>742</td>
+			<td style="color: #FF0000">常用</td>
+			<td>735</td>
+		</tr>
+		<tr>
+		    <td>16.5"</td>
+			<td>前刹车片</td>
+			<td>30742029</td>
+			<td>883</td>
+			<td style="color: #FF0000"></td>
+			<td>883</td>
+		</tr>
+	 <tr class="table-secondary">
+			<td rowspan="5" ><b>S80</b></td>
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>30793941</td>
+			<td>1106</td>
+		<td style="color: #FF0000">常用</td>
+			<td>931</td>
+			
+		</tr>
+		<tr class="table-secondary">
 		
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31304129</td>
+			<td>931</td>
+			<td style="color: #FF0000"></td>
+			<td>931</td>
+		<tr class="table-secondary">
+			
+			<td></td>
+			<td>后刹车片</td>
+			<td>31329430/31445796</td>
+			<td>781</td>
+			<td style="color: #FF0000">常用</td>
+			<td>781</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td>16.5"17.5"</td>
+			<td>前刹车片</td>
+			<td>30793539</td>
+			<td>1234</td>
+			<td>6缸机很少用</td>
+			<td>1039</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td></td>
+			<td>后刹车片</td>
+			<td>30671576</td>
+			<td>1013</td>
+			<td>机械手刹很少用</td>
+			<td>781</td>
+		</tr>
+		<tr>
+			<td rowspan="3" ><b>XC40</b></td>
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31471408</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+        <tr>
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31471410</td>
+			<td>1199</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>16"</td>
+			<td>后刹车片</td>
+			<td>31471471</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
 	</tbody>
+	
 </table>
 </div>
 
