--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
     </div>
   </nav>
 
- <div class="table-responsive">
+ <div class="table-responsive-sm">
 <table class="table text-nowrap table-striped table-sm">
 	<br>
 	<h1>2019年3月5日</h1>
