--- a/braket.html
+++ b/braket.html
@@ -47,12 +47,12 @@
 		  <li class="nav-item">
             <a class="nav-link" href="#">关于我们</a>
           </li>
-           </div>
+           
 		</div>
-  </nav>
+  
 	</nav>
 
- <div class="table-responsive">
+ <div class="table-responsive-sm">
 <table class="table text-nowrap table-bordered table-sm">
 	<br>
 	<h1>2019年3月5日</h1>
@@ -69,7 +69,7 @@
 	</thead>
 	<tbody>
 		<tr class="table-secondary">
-			<td rowspan="4" ><b>SPA XC60 II代</b></td>
+			<td rowspan="4" ><b>SPA XC60 II</b></td>
 			<td>17"</td>
 			<td>前刹车片</td>
 			<td>31423652</td>
@@ -105,7 +105,7 @@
 			<td>929</td>
 		</tr>
 		<tr>
-			<td rowspan="3" ><b>17款XC60</b></td>
+			<td rowspan="3" ><b>老款XC60</b></td>
 			<td></td>
 			<td>前刹车片</td>
 			<td>31685796</td>
@@ -130,7 +130,7 @@
 			<td>1039</td>
 		</tr>
 		<tr class="table-secondary">
-			<td rowspan="4" ><b>S60L-S60-V60</b></td>
+			<td rowspan="4" ><b>S60-V60</b></td>
 			<td>16"</td>
 			<td>前刹车片</td>
 			<td>30793941</td>
