--- a/braket.html
+++ b/braket.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#">皮带火花塞</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="#">关于我们</a>
+            <a class="nav-link" href="about.html">关于我</a>
           </li>
            
 		</div>
