--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#">皮带火花塞</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="#">关于我们</a>
+            <a class="nav-link" href="about.html">关于我</a>
           </li>
           <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
