--- a/services.html
+++ b/services.html
@@ -786,7 +786,7 @@
 </table>
 </div>
 
-  <footer class="py-5 bg-dark col-md-12" >
+  <footer class="py-5 bg-dark; col-md-12" >
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
