--- a/services.html
+++ b/services.html
@@ -17,8 +17,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 <style type="text/css">
-	th{color:white }
-	th{background-color:#404040;}
+	{color:white }
+	{background-color:#404040;}
 	</style>
 </head>
 
@@ -89,7 +89,7 @@
 <table class="table text-nowrap table-striped table-sm">
 	<br>
 	<h1>2019年3月5日</h1>
-	<thead>
+	<thead class="thead-dark">
 		<tr>
 			<th>品牌</th>
 			<th>编码</th>
@@ -786,7 +786,7 @@
 </table>
 </div>
 
-  <footer class="py-5 bg-dark; col-md-12" >
+  <footer class="col-md-12; py-5 bg-dark" >
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
