--- a/braket.html
+++ b/braket.html
@@ -87,7 +87,7 @@
     </div>
   </nav>
 
- <div class="table table-bordered">
+ <div class="table table-bordered; table-responsive-sm">
 <table class="table text-nowrap">
 	<br>
 	<h1>2019年3月5日 </h1>
