--- a/braket.html
+++ b/braket.html
@@ -17,10 +17,10 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 <style type="text/css">
-	<!--th{color:white }th{background-color:#404040;}-->
-	.table tbody tr td{vertical-align: middle;}
-	
+	.table td{vertical-align: middle;}
 	</style>
+
+	
 </head>
 
 <body>
@@ -39,61 +39,27 @@
             <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">刹车片</a>
+            <a class="nav-link" href="braket.html">刹车片</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link" href="#">皮带火花塞</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="#">关于我</a>
+            <a class="nav-link" href="about.html">关于我</a>
           </li>
-          <!--<li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
-          </li>
-        </ul>-->
-      </div>
-    </div>
-  </nav>
+           
+		</div>
+  
+	</nav>
 
  <div class="table-responsive-sm">
-<table class="table table-bordered; table text-nowrap; table-bordered; table-sm">
+<table class="table text-nowrap table-bordered table-sm">
 	<br>
-	<h1>2019年3月5日 </h1>
+	<h1>2019年3月5日</h1>
 	<thead class="thead-dark">
 		<tr>
 			<th>车型</th>
-			<th>刹车盘尺寸</th>
+			<th>盘尺寸</th>
 			<th>名称</th>
 			<th>编码</th>
 			<th>ERP售价</th>
@@ -102,13 +68,49 @@
 		</tr>
 	</thead>
 	<tbody>
+		<tr class="table-secondary">
+			<td rowspan="4" ><b>SPA XC60 II</b></td>
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31423652</td>
+			<td>1137</td>
+		<td style="color: #FF0000">常用</td>
+			<td>1137</td>
+			
+		</tr>
+		<tr class="table-secondary">
+		
+			<td>16"</td>
+			<td>后刹车片</td>
+			<td>31687502</td>
+			<td>986</td>
+			<td style="color: #FF0000">常用</td>
+			<td>879</td>
+		<tr class="table-secondary">
+			
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31499906</td>
+			<td>1148</td>
+			<td>t8混动</td>
+			<td>1148</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td>17"</td>
+			<td>后刹车片</td>
+			<td>32233035</td>
+			<td>929</td>
+			<td>t8混动</td>
+			<td>929</td>
+		</tr>
 		<tr>
-			<td rowspan="3" ><b>17款XC60</b></td>
+			<td rowspan="3" ><b>老款XC60</b></td>
 			<td></td>
 			<td>前刹车片</td>
 			<td>31685796</td>
 			<td>1064</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>1064</td>
 		</tr>
 		<tr>
@@ -116,7 +118,7 @@
 			<td>后刹车片</td>
 			<td>31685796</td>
 			<td>781</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>781</td>
 		</tr>
 		<tr>
@@ -127,26 +129,34 @@
 			<td>年份16年起及以后</td>
 			<td>1039</td>
 		</tr>
-		<tr>
-			<td rowspan="3" ><b>S60L-S60-V60</b></td>
+		<tr class="table-secondary">
+			<td rowspan="4" ><b>S60-V60</b></td>
 			<td>16"</td>
 			<td>前刹车片</td>
-			<td>31434804/30793540/30793941</td>
-			<td>1092/931/1106</td>
-			<td><font color="#ff0000">常用件</td>
-			<td>929/931/931</td>
+			<td>30793941</td>
+			<td>1106</td>
+		<td style="color: #FF0000">常用</td>
+			<td>931</td>
 			
 		</tr>
-		<tr>
+		<tr class="table-secondary">
+		
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31434804/30793540</td>
+			<td>1092/931</td>
+			<td style="color: #FF0000"></td>
+			<td>929/931</td>
+		<tr class="table-secondary">
 			
 			<td></td>
 			<td>后刹车片</td>
 			<td>31317482</td>
 			<td>781</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>781</td>
 		</tr>
-		<tr>
+		<tr class="table-secondary">
 			
 			<td>16.5"17.5"</td>
 			<td>前刹车片</td>
@@ -161,38 +171,38 @@
 			<td>前刹车片</td>
 			<td>31423652</td>
 			<td>1137</td>
-			<td><font color="#ff0000">常用件</td>
+			<td style="color: #FF0000">常用</td>
 			<td>1137</td>
 		</tr>
 		<tr>
 			
 			<td>16"</td>
-			<td>31687502</td>
 			<td>后刹车片</td>
+			<td>31687502</td>
 			<td>986</td>
-			<td><font color="#ff0000">T4常用</td>
+			<td style="color: #FF0000">t4常用</td>
 			<td>879</td>
 		</tr>
 		<tr>
 			
 			<td>17"</td>
-			<td>32233035</td>
 			<td>后刹车片</td>
+			<td>32233035</td>
 			<td>929</td>
-			<td><font color="#ff0000">T5常用</td>
+			<td style="color: #FF0000">t5常用</td>
 			<td>929</td>
 		</tr>
 		<tr>
 			
 			<td>18"</td>
-			<td>31499906</td>
 			<td>前刹车片</td>
+			<td>31499906</td>
 			<td>1148</td>
 			<td></td>
 			<td>1148</td>
 		</tr>
-		<tr>
-			<td rowspan="2" ><b>SPA XC90</b></td>
+		<tr class="table-secondary">
+			<td rowspan="2" ><b>SPA新XC90</b></td>
 			<td>18"19"</td>
 			<td>前刹车片</td>
 			<td>31499906</td>
@@ -200,8 +210,7 @@
 			<td></td>
 			<td>1148</td>
 		</tr>
-		<tr>
-			
+        <tr class="table-secondary">
 			<td>17"18"</td>
 			<td>后刹车片</td>
 			<td>32233035</td>
@@ -209,12 +218,149 @@
 			<td></td>
 			<td>929</td>
 		</tr>
-
+		<tr>
+			<td rowspan="3" ><b>老款XC90</b></td>
+			<td>17.5"</td>
+			<td>前刹车片</td>
+			<td>31262705</td>
+			<td>1349</td>
+			<td style="color: #FF0000">常用</td>
+			<td>1137</td>
+		</tr>
+        <tr>
+			<td></td>
+			<td>后刹车片</td>
+			<td>30793093</td>
+			<td>793</td>
+			<td style="color: #FF0000">常用</td>
+			<td>793</td>
+		</tr>
+		<tr>
+		    <td>17"</td>
+			<td>前刹车片</td>
+			<td>31687104</td>
+			<td>1064</td>
+			<td style="color: #FF0000"></td>
+			<td>1064</td>
+		</tr>
+	 <tr class="table-secondary">
+			<td rowspan="2" ><b>C30 S40</b></td>
+			<td>15"16"</td>
+			<td>前刹车片</td>
+			<td>30742030</td>
+			<td>774</td>
+			<td></td>
+			<td>774</td>
+		</tr>
+        <tr class="table-secondary">
+			<td></td>
+			<td>后刹车片</td>
+			<td>30742031</td>
+			<td>731</td>
+			<td></td>
+			<td>731</td>
+		</tr>
+	    <tr>
+			<td rowspan="3" ><b>V40 V40CC</b></td>
+			<td>15"16"</td>
+			<td>前刹车片</td>
+			<td>31341301</td>
+			<td>894</td>
+			<td style="color: #FF0000">常用</td>
+			<td>929</td>
+		</tr>
+        <tr>
+			<td></td>
+			<td>后刹车片</td>
+			<td>31341327</td>
+			<td>742</td>
+			<td style="color: #FF0000">常用</td>
+			<td>735</td>
+		</tr>
+		<tr>
+		    <td>16.5"</td>
+			<td>前刹车片</td>
+			<td>30742029</td>
+			<td>883</td>
+			<td style="color: #FF0000"></td>
+			<td>883</td>
+		</tr>
+	 <tr class="table-secondary">
+			<td rowspan="5" ><b>S80</b></td>
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>30793941</td>
+			<td>1106</td>
+		<td style="color: #FF0000">常用</td>
+			<td>931</td>
+			
+		</tr>
+		<tr class="table-secondary">
+		
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31304129</td>
+			<td>931</td>
+			<td style="color: #FF0000"></td>
+			<td>931</td>
+		<tr class="table-secondary">
+			
+			<td></td>
+			<td>后刹车片</td>
+			<td>31329430/31445796</td>
+			<td>781</td>
+			<td style="color: #FF0000">常用</td>
+			<td>781</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td>16.5"17.5"</td>
+			<td>前刹车片</td>
+			<td>30793539</td>
+			<td>1234</td>
+			<td>6缸机很少用</td>
+			<td>1039</td>
+		</tr>
+		<tr class="table-secondary">
+			
+			<td></td>
+			<td>后刹车片</td>
+			<td>30671576</td>
+			<td>1013</td>
+			<td>机械手刹很少用</td>
+			<td>781</td>
+		</tr>
+		<tr>
+			<td rowspan="3" ><b>XC40</b></td>
+			<td>17"</td>
+			<td>前刹车片</td>
+			<td>31471408</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+        <tr>
+			<td>16"</td>
+			<td>前刹车片</td>
+			<td>31471410</td>
+			<td>1199</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>16"</td>
+			<td>后刹车片</td>
+			<td>31471471</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
 	</tbody>
+	
 </table>
 </div>
 
-  <footer class="col-md-12; py-5 bg-dark">
+  <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
