--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		<br>
 
     <!-- Intro Content -->
-    <div class="row">
+   <!-- <div class="row">
       <div class="col-lg-12">
         <img class="img-fluid rounded mb-3" src="img/Untitled.png" alt="">
 		<img class="img-fluid rounded mb-1" src="img/Untitled-1.png" alt="">
@@ -70,23 +70,23 @@
     <!-- /.row -->
 
     <!-- Team Members -->
-    <!-- <h2>Our Team</h2>
+    <h2>关于我</h2>
 
     <div class="row">
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-3 mb-3">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="img/Untitled-1.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h4 class="card-title; text-center"></h4>
+            <h6 class="card-subtitle mb-2 text-muted"></h6>
+            <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">540009202@qq.com</a>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mb-4">
+      <!--<div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
